--- a/index.html
+++ b/index.html
@@ -1,10 +1,8 @@
-dir
-type index.html
-<html></html>
-
-type index.html
-index.html
-index.html
-cls
-CLS
-TYPE
+<html>
+    <head></head>
+    <body>
+        <header></header>
+        <div></div>
+        <footer></footer>
+    </body>
+</html>
