--- a/index.html
+++ b/index.html
@@ -2,7 +2,9 @@
     <head></head>
     <body>
         <header></header>
-        <div></div>
+        <div>
+            <h1>Some content</h1>
+        </div>
         <footer></footer>
     </body>
 </html>
