Added more content

--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
         <header></header>
         <div>
             <h1>Some content</h1>
+            <h2>Some other content</h2>
+            <h3>And other...</h3>
         </div>
         <footer></footer>
     </body>
